Ability to delete private/public marcos and polos

--- a/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
@@ -82,7 +82,7 @@
             android:layout_weight="1"
             android:elevation="12dp"
             android:onClick="onClickDeletePolo"
-            android:text="Dismiss"
+            android:text="@string/delete"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@color/white" />
