- Edge cases for polos - Fixed public polos - Changed blue route to update everytime location changes - Other bug fixes

--- a/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
+++ b/MarcoPoloApp/app/src/main/res/layout/activity_polo.xml
@@ -95,7 +95,7 @@
             android:layout_weight="1"
             android:elevation="12dp"
             android:onClick="onClickSendPolo"
-            android:text="@string/send"
+            android:text="@string/polo"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@color/white" />
